set login image to fixed url (broken on production)

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -170,7 +170,7 @@ a:hover {
 .accounts-footer-decor {
     position: relative;
     display: block;
-    background: url(/static/img/pattern-bg-trans.png);
+    background: url(https://res.cloudinary.com/ddrtqwdxx/image/upload/v1682804020/static/img/pattern-bg-trans.ab9225c9a136.png);
     background-repeat: repeat-x;
     background-position: center;
     width: 100vw;
